--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,15 @@
 .small {
   font-size: 0.75rem;
 }
+
+/*card movie styles*/
+.card-movie {
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 0px 2px 2px 0px #000;
+
+  width: 195px;
+  height: 285px;
+}
