--- a/src/App.css
+++ b/src/App.css
@@ -30,14 +30,6 @@
   font-size: 0.75rem;
 }
 
-/*card movie styles*/
-.card-movie {
-  display: flex;
-  flex-direction: column;
-  border-radius: 10px;
-  background-color: white;
-  box-shadow: 0px 2px 2px 0px #000;
-
-  width: 195px;
-  height: 285px;
+section.content {
+  margin-top: 40px;
 }
