--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -11,16 +11,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;    
+    
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 0px 2px 2px 0px #000;
 }
 
 .card-movie img{
-    max-width: 100%;
+    width: 100% ;
     height: auto;
     border-radius: 10px;
 }
 
 .card-movie span {
-    margin-top: 10px;
+    margin: 10px;
     font-size: 1rem;
     text-align: center;
 }
