--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -28,3 +28,37 @@
     font-size: 1rem;
     text-align: center;
 }
+
+.category-container { 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 40px;
+}
+
+.card-actor {
+    flex: 0 1 calc(50% - 20px);
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    border-radius: 10px;
+}
+
+.card-actor img{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+
+.card-actor p {
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.card-actor span {
+    font-size: 1rem;
+    color: gray;
+}
