--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -29,14 +29,21 @@
     text-align: center;
 }
 
-.category-container { 
+.actors {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
     gap: 20px;
-    margin-bottom: 40px;
+    width: 100%;
+    padding: 10px;
 }
 
+.actors > section {
+    width: calc(100% / 3);
+}
+.category-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
 .card-actor {
     flex: 0 1 calc(50% - 20px);
     display: flex;
