--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -30,15 +30,13 @@
 }
 
 .actors {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     width: 100%;
     padding: 10px;
 }
 
-.actors > section {
-    width: calc(100% / 3);
-}
 .category-container {
     display: flex;
     flex-direction: column;
